# nbkit

./: .gitignore  Cargo.toml
src/lib/: lib.rs
src/lib/core/: errors.rs  graph.rs  mod.rs  package.rs  pkgdb.rs  set.rs  wrappers.rs
src/lib/nbpm/: cli.rs  config.rs  errors.rs  install.rs  mod.rs  remove.rs  utils.rs
src/lib/repo/: README.md  mod.rs
src/lib/utils/: mod.rs
