[package]
name = "nbkit"
version = "0.1.0"
authors = ["mikelma <mikelma7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "0.11.0"
toml = "0.5"
serde = "1.0.115"
serde_derive = "1.0.115"
clap = "2.33.3"
reqwest = {version="0.10.8",  default-features = false, features = ["blocking"]}
sha2 = "0.9.1"
walkdir = "2.3.1"

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "nbpm"
path = "src/bin/nbpm.rs"

[[bin]]
name = "nbinfo-gen"
path = "src/bin/nbinfo_gen.rs"
